Need to fix Cascader and alignment mismatch

--- a/webserver/react_views/src/components/POSToken/POSToken.css
+++ b/webserver/react_views/src/components/POSToken/POSToken.css
@@ -1,5 +1,7 @@
 .pos-token {
   margin: 1px;
+  background-color: #E5E5E5;
+  white-space: pre-wrap;
 }
 
 .pos-token:hover {
